# XDU_compiler_principles

./: .gitignore  CMakeLists.txt  README.md  example.a3lang  example2.a3drawlang  main.cpp
compiler/: CMakeLists.txt  compiler.cpp
compiler/scanner/: scanner.cpp
compiler/semantic/: parser.cpp
compiler/symbol/: CMakeLists.txt  symbol.cpp
compiler/syntactic/: CMakeLists.txt  parser.cpp
include/: a3compiler.h  compile_err.h  scanner.h  semantic.h  symbol.h  syntactic.h  tools.h
lib/: CMakeLists.txt  tool.cpp
old_trash_version/: CMakeLists.txt  README.md  main.cpp
old_trash_version/message/: CMakeLists.txt  message.cpp  message.h
old_trash_version/parser/: CMakeLists.txt  parser.cpp
old_trash_version/scanner/: CMakeLists.txt  scanner.cpp
old_trash_version/semantic/: semantic.h
parser/: parser.h
scanner/: scanner.cpp  scanner.h
semantic/: CMakeLists.txt  semantic.cpp
